adding a warning fire

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <button (click)="onSuccess()" >Success</button>
 <button (click)="onError()" >Error</button>
+<button (click)="onWarning()" >Warning</button>
