adding a confirm button and getting the response from it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <button (click)="onSuccess()" >Success</button>
 <button (click)="onError()" >Error</button>
 <button (click)="onWarning()" >Warning</button>
+<button (click)="onConfirm()" >Confirm Deletion</button>
