--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
+<h1>Alert Messages</h1>
 <button (click)="onSuccess()" >Success</button>
 <button (click)="onError()" >Error</button>
 <button (click)="onWarning()" >Warning</button>
 <button (click)="onConfirm()" >Confirm Deletion</button>
+<h1>Toastr</h1>
+<button (click)="onToastrSuccess()" >Toastr Success</button>
+<button (click)="onToastrError()" >Toastr Error</button>
